; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_put_stateid.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_put_stateid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsd4_compound_state = type { i32, i64 }

@CURRENT_STATE_ID_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfsd4_compound_state*, i32*)* @put_stateid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_stateid(%struct.nfsd4_compound_state* %0, i32* %1) #0 {
  %3 = alloca %struct.nfsd4_compound_state*, align 8
  %4 = alloca i32*, align 8
  store %struct.nfsd4_compound_state* %0, %struct.nfsd4_compound_state** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.nfsd4_compound_state*, %struct.nfsd4_compound_state** %3, align 8
  %6 = getelementptr inbounds %struct.nfsd4_compound_state, %struct.nfsd4_compound_state* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load %struct.nfsd4_compound_state*, %struct.nfsd4_compound_state** %3, align 8
  %11 = getelementptr inbounds %struct.nfsd4_compound_state, %struct.nfsd4_compound_state* %10, i32 0, i32 0
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @memcpy(i32* %11, i32* %12, i32 4)
  %14 = load %struct.nfsd4_compound_state*, %struct.nfsd4_compound_state** %3, align 8
  %15 = load i32, i32* @CURRENT_STATE_ID_FLAG, align 4
  %16 = call i32 @SET_STATE_ID(%struct.nfsd4_compound_state* %14, i32 %15)
  br label %17

17:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @SET_STATE_ID(%struct.nfsd4_compound_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
